# libcutie

./: .gitignore  LICENSE.md  Makefile.am  README.md  configure.ac  cutie.c.json  cutie.h.json  dox.conf  prologue.h
cutie/: Makefile.am  class.c  config.h.in  cutie.c  cutie.h.in  mem.c  panic.c  str.c
example/: Makefile.am
example/predictable/: Makefile  README.md  check.py  module.c  module.h
example/trivial/: Makefile.am  replicator.c
examples/: Makefile.am
examples/predictable/: .gitignore  check.data  check.data.sh  module.c  module.h
examples/robots/: Makefile.am  example.c  replicator.h  robot.c  robot.h
include/: Makefile.am  config.h.in  cutie.h
include/cutie/: class.h  config.h.in  cpp.h  panic.h  wrapped.h
m4/: .gitignore
source/: Makefile.am  class.c  panic.c
test/: Makefile.am  class.c  class_abstractgizmo.c  class_abstractgizmo.h  class_autogizmo.c  class_autogizmo.h  class_emptygizmo.c  class_emptygizmo.h  class_filewidget.c  class_filewidget.h  class_integerwidget.c  class_integerwidget.h  class_widget.c  class_widget.h  cpp.c  panic.c  test.h
tests/: Makefile.am  check_class.c  check_class_abstractgizmo.c  check_class_abstractgizmo.h  check_class_emptygizmo.c  check_class_emptygizmo.h  check_class_filewidget.c  check_class_filewidget.h  check_class_integerwidget.c  check_class_integerwidget.h  check_class_widget.c  check_class_widget.h  check_panic.c  check_str.c
tool/: Makefile.am
tool/amalgamate/: Makefile.am  amalgamate.py
tool/amalgamate/test/: Makefile.am  amalgamate.sh  include.h.expected  source.c.expected
tool/amalgamate/test/source/: main.c
tools/: amalgamate.sh
